# BerrettoCybernetico-UniFi

./: .gitignore  README.md  TODO.md
.obsidian/: app.json  appearance.json  community-plugins.json  workspace-mobile.json  workspace.json
.obsidian/snippets/: custom_callouts.css  headers.css  justify_text.css  mermaid_pdf.css  pdf_break.css
BerrettoCybernetico/C Files/: CoseDaFare  List.c  (+1 more)
C Files/: List.c  Liste Sequenziali.c  ListeCollegate.c  ListePuntatori.c  ListeSequenziali.c  linked_list_array_indices.c  linked_list_pointers.c
Lezioni/: test.txt
Materiale/: Prova Ink.md
Materiale/1° Ing Inf/Programmazione/Esame di Neri/Esercizio4/: CMakeLists.txt  Directory.h  Factory.h  LinuxDirectory.h  LinuxFactory.h  LinuxFile.cpp  LinuxPermission.h  MacOSDirectory.cpp  MacOSFile.cpp  MacOSFile.h  MacOSPermission.cpp  MacOsFactory.cpp  MacOsFactory.h  Permission.h  WindowsDirectory.h  WindowsFile.cpp  WindowsFile.h  main.cpp
Primo Anno/Programming/Esercizio 3/: Bow.cpp  Bow.h  CMakeLists.txt  Dice.cpp  Dice.h  GameCharacter.cpp  GameCharacter.h  Knight.cpp  Knight.h  Orc.cpp  Orc.h  Skeleton.cpp  Skeleton.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  Wizard.cpp  Wizard.h  main.cpp
Primo Anno/Programming/Esercizio 4/: Bow.cpp  Bow.h  CMakeLists.txt  GameCharacter.cpp  GameCharacter.h  Knight.cpp  Knight.h  MageKnight.cpp  MageKnight.h  Orc.h  Skeleton.cpp  Skeleton.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  Wizard.cpp  Wizard.h  main.cpp
Primo Anno/Programming/Esercizio 6/: CMakeLists.txt  Dice.cpp  Dungeon.cpp  Dungeon.h  FakeJPEG.cpp  FakeJPEG.h  GameCharacter.cpp  GameCharacter.h  GameFileException.cpp  GameFileException.h  Inventory.h  Knight.h  MageKnight.cpp  Orc.cpp  Potion.cpp  Potion.h  Skeleton.cpp  Skeleton.h  Sword.cpp  Sword.h  Utilities.h  Vault.h  Weapon.cpp  Wizard.h  main.cpp  splash_screen.cpp  splash_screen.h
Primo Anno/Programming/Esercizio 6/res/: secret_map.txt  splash_screen.fake_jpg  splash_screen_corrupted.fake_jpg  start_map.txt  start_map_corrupted.txt  start_map_corrupted2.txt
(+522 files in other folders)
